[package]
name = "gudp"
version = "0.1.0"
authors = ["Mark Schifflin <randy.schifflin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bring = { path = "../bring" }
cond-mutex = { path = "../cond-mutex" }
clock  = { path = "../clock" }

mio = {version = "0.7.7", features = ["net", "os-poll"] }
crossbeam = "0.8.0"
byteorder = "1"
log = "0.4.14"
