[package]
name = "recv-shakespeare"
version = "0.1.0"
authors = ["Mark Schifflin <randy.schifflin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gudp = { path = "../../gudp" }
clock = { path = "../../clock" }
env_logger = "0.8.3"
